--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -9,7 +9,7 @@
 
 .section-one-container {
   width: 100%;
-  height: 75%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
